[package]
name = "rust_transmission_bot"
version = "0.1.0"
authors = ["Mihir Joshi <mihir3535@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
toml ="0.5.6"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.8"
env_logger = "0.7.1"
dirs = "2.0.2"